logs/django-easy-reports.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/__ereports'...
Listing './lib/python3.5/site-packages/__ereports/templatetags'...
Listing './lib/python3.5/site-packages/__ereports/tests'...
Compiling './lib/python3.5/site-packages/__ereports/tests.py'...
***   File "./lib/python3.5/site-packages/__ereports/tests.py", line 141
    print 111, url, self.user, type(self.user)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_easy_reports-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/ereports'...
Listing './lib/python3.5/site-packages/ereports/engine'...
Listing './lib/python3.5/site-packages/ereports/management'...
Listing './lib/python3.5/site-packages/ereports/management/commands'...
Listing './lib/python3.5/site-packages/ereports/migrations'...
Listing './lib/python3.5/site-packages/ereports/requirements'...
Listing './lib/python3.5/site-packages/ereports/static'...
Listing './lib/python3.5/site-packages/ereports/static/ereports'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/css'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/js'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/multiselect'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/multiselect/css'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/multiselect/css/images'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/multiselect/css/themes'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/multiselect/css/themes/smoothness'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/multiselect/js'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/multiselect/js/locale'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/multiselect/js/plugins'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/multiselect/js/plugins/blockUI'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/multiselect/js/plugins/localisation'...
Listing './lib/python3.5/site-packages/ereports/static/ereports/multiselect/js/plugins/tmpl'...
Listing './lib/python3.5/site-packages/ereports/templates'...
Listing './lib/python3.5/site-packages/ereports/templates/ereports'...
Listing './lib/python3.5/site-packages/ereports/templates/ereports/tpls'...
Listing './lib/python3.5/site-packages/ereports/templatetags'...
Listing './lib/python3.5/site-packages/ereports/tests'...
Listing './lib/python3.5/site-packages/ereports/tests/app'...
Listing './lib/python3.5/site-packages/ereports/tests/engine'...
Listing './lib/python3.5/site-packages/ereports/tests/templatetags'...
Listing './lib/python3.5/site-packages/ereports/tests/web'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
